@@ -1,0 +1,19 @@
+<s id="top">
+
+<s id="david_and_goliath">
+
+David: I will kill you.
+
+<!-- David and Goliath are Biblical characters -->
+
+Goliath: no way, you little idiot!
+
+<!--
+FILL IN - some scenes.
+-->
+
+David: yes way!
+
+</s>
+
+</s>
